Se realiza el sass del main de pag product

--- a/pages/categoriesproducts.html
+++ b/pages/categoriesproducts.html
@@ -116,7 +116,7 @@
     <main id="containercategoriesproducts">
         <section id="containercatproducts">
             <!-- Filtro de acordeon -->
-            <div class="container mt-5">
+            <div class="acordeoncatproducts container mt-5">
                 <h2>Filtro</h2>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
