--- a/pages/product.html
+++ b/pages/product.html
@@ -117,22 +117,31 @@
         <section class="proproduct">
             <div class="imagesproproduct">
                 <div class="mainimgproproduct">
-                    <img src="" alt="imgproproductone">
+                    <img src="../images/N-AF15-TG.jpg" alt="imgproproductone">
                 </div>
                 <div class="secondaryimgproproduct">
-                    <img src="" alt="imgproproducttwo">
-                    <img src="" alt="imgproproductthree">
-                    <img src="" alt="imgproproductfour">
-                    <img src="" alt="imgproproductfive">
-                    <img src="" alt="imgproproductsix">
+                    <img src="../images/imgcatpro2.jpg" alt="imgproproducttwo">
+                    <img src="../images/imgcatpro3.jpg" alt="imgproproductthree">
+                    <img src="../images/imgcatpro4.jpg" alt="imgproproductfour">
+                    <img src="../images/imgcatpro5.jpg" alt="imgproproductfive">
+                    <img src="../images/imgcatpro6.jpg" alt="imgproproductsix">
                 </div>
             </div>
             <div class="detallesproproduct">
                 <div class="brandproproduct">
-                    <span><strong>Asus </strong><i class="fas fa-registered"></i></span>
+                    <h2>Asus</h2>
+                    <i class="fas fa-registered"></i>
                 </div>
                 <div class="nameproproduct">
                     <p>Notebook TUF Gaming F15 FX506 Intel Core i5-11400H NVIDIA RTX 2050 4GB 15.6" FHD 144Hz 8GB 512GB SSD Windows 11 Graphite Black</p>
+                </div>
+                <div class="skuunits">
+                    <div class="productsku">
+                        <span><strong>SKU:</strong> 5L3M1G8W</span>
+                    </div>
+                    <div class="productunits">
+                        <span>+100 Stock</span>
+                    </div>
                 </div>
                 <div class="valueproproduct">
                     <div class="currentvalueproproduct">
@@ -183,7 +192,7 @@
             </div>
             <!-- Sección del contenido oculto DESCRIPCION - FICHATECNICA - GARANTIA -->
             <div class="descriptionproproduct container mt-5">
-                <ul class="nav nav-tabs" id="mytabs">
+                <ul class="acordeondescriptionpropro nav nav-tabs" id="mytabs">
                     <li class="nav-item">
                         <a class="nav-link active" id="descripcion-tab" data-bs-toggle="tab" href="#descripcion">Descripción</a>
                     </li>
@@ -201,12 +210,26 @@
                     </div>
                     <div class="tab-pane fade" id="fichatecnica">
                         <h2>Ficha Técnica</h2>
-                        <p>Detalles técnicos del producto...</p>
+                        <img src="../images/especificacionimgpro1.png" alt="imgfichas">
+                        <img src="../images/especificacionimgpro2.png" alt="imgfichas">
+                        <img src="../images/especificacionimgpro3.png" alt="imgfichas">
+                        <img src="../images/especificacionimgpro4.png" alt="imgfichas">
                     </div>
                     <div class="tab-pane fade" id="garantia">
                         <h2>Garantía</h2>
-                        <p>Información sobre la garantía del producto...</p>
-                </div>
+                        <div>
+                            <h3>Plazo</h3>
+                            <div>
+                                <p>Garantía del fabricante de 12 meses.</p>
+                                <p>Todo producto nuevo cuenta con una garantía legal de seis meses contados desde la fecha de compra en caso de falla de fábrica (Ley del consumidor 19.496). Si pasados los primeros 6 meses y hasta el término del mes 12, tu producto presenta una falla de fábrica, puedes solicitar reparación del producto acercándote a cualquiera de nuestras tiendas a lo largo del país o directamente al servicio técnico autorizado del fabricante. Pasados los primeros 6 meses, si GangaStore determina que el producto es irreparable podría realizar cambios de productos o devolución de dinero en vez de la reparación.</p>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Condiciones</h3>
+                            <p>Para hacer uso de la Garantía del Fabricante, acércate a cualquiera de nuestras tiendas a lo largo del país (o directamente al servicio técnico autorizado del fabricante), para que mediante un diagnóstico se certifique que la falla es de fabricación y no es atribuible a un hecho imputable al usuario.
+                            Para gestionar la garantía te recomendamos presentar la boleta o factura original, el producto sin daño físico, embalajes completos y todos los accesorios del producto. Para mayor información sobre cómo opera la garantía, puedes contactar a nuestros ejecutivos de Servicio Post Venta al: + 56 2 1234 5678 o a través del Formulario de Contacto.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
