--- a/pages/changepassword.html
+++ b/pages/changepassword.html
@@ -9,7 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../scss/main.css">
     <link rel="shortcut icon" href="../images/logoconfondo.png">
+    <!-- SEO -->
     <title>GangaStore</title>
+    <meta name="description" content="Compra tus componentes, torres gamer y notebooks a los mejores precios del mercado.">
+    <meta name="keywords" content="notebook barato, notebooks baratos, pc gamer, pc gamer barato, fuentes de poder, placa madre, memoria ram, disipador por aire, disipador pc, water cooling, ventiladores pc, ssd, hdd, gpu, rtx, 3060ti, 3060 ti, 3060, gabinetes, gabinete, itx, atx, micro atx, m-atx">
 </head>
 <body>
     <!-- Información escencial para clientes -->
