--- a/pages/categoriesproducts.html
+++ b/pages/categoriesproducts.html
@@ -119,79 +119,113 @@
     <main id="containercategoriesproducts">
         <section id="containercatproducts">
             <!-- Filtro de acordeon -->
-            <div class="acordeoncatproducts container mt-5">
+            <div class="acordeoncatproducts container">
                 <h2>Filtro</h2>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Sección 1
+                                Marca
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 1.1
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 1.2
-                                </label>
+                                <form action="">
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Asus
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Gigabyte
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        MSI
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Asrock
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        DeepCool
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Corsair
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Kingston
+                                    </label>
+                                </form>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                Sección 2
+                                Categoria
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 2.1
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 2.2
-                                </label>
+                                <form action="">
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Disipador
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Procesador
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Placa Madre
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Disco SSD
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Disco HDD
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        Tarjeta Grafica
+                                    </label>
+                                </form>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                Sección 3
+                                Factor Forma
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 3.1
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 3.2
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 3.3
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 3.4
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 3.5
-                                </label>
-                                <label class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="">
-                                    Opción 3.6
-                                </label>
+                                <form action="">
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        E-ATX
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        ATX
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        M-ATX
+                                    </label>
+                                    <label class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="">
+                                        I-ATX
+                                    </label>
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -200,7 +234,7 @@
             <div class="contcatproducts">
                 <div class="filtrosecundario">
                     <span>Ordenar por:</span>
-                    <select name="" id="">
+                    <select name="filtsecundario" id="filtsecundario">
                         <option value="">Relevancia</option>
                         <option value="">Nombre</option>
                         <option value="">Marca</option>
