--- a/pages/categoriesproducts.html
+++ b/pages/categoriesproducts.html
@@ -121,14 +121,14 @@
             <!-- Filtro de acordeon -->
             <div class="acordeoncatproducts container">
                 <h2>Filtro</h2>
-                <div class="accordion" id="accordionExample">
+                <div class="accordion" id="accordionmain">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 Marca
                             </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <form action="">
                                     <label class="form-check">
@@ -1298,12 +1298,114 @@
                                 </a>
                             </div>
                         </li>
+                        <li class="product">
+                            <a href="../pages/product.html" class="productinfo">
+                                <div class="producttrademark">
+                                    <span><strong>Asus </strong><i class="fas fa-registered"></i></span>
+                                </div>
+                                <div class="productname">
+                                    <p>Notebook Zenbook 14X OLED UX3404 14.5" 2K Intel Core i9-13900H 16GB 1TB SSD Windows 11 Inkwell Gray UX3404VA-M9115W</p>
+                                </div>
+                                <div class="skuunits">
+                                    <div class="productsku">
+                                        <span><strong>SKU:</strong> 5L3M1G8W</span>
+                                    </div>
+                                    <div class="productunits">
+                                        <span>+100 Stock</span>
+                                    </div>
+                                </div>
+                                <div class="productimg">
+                                    <img src="../images/N-AZ14X-UX.jpg" alt="imgcontcatpro">
+                                </div>
+                            </a>
+                            <div class="valuecart">
+                                <a href="../pages/product.html" class="value">
+                                    <div class="productvalue">
+                                        <span><strong>$ 1.169.990</strong></span>
+                                    </div>
+                                    <div class="productprevalue">
+                                        <span><s>$ 1.499.990</s></span>
+                                    </div>
+                                </a>
+                                <a href="../pages/shoppingcart.html" class="cartplus">
+                                    <i class="fa fa-cart-plus"></i>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="product">
+                            <a href="../pages/product.html" class="productinfo">
+                                <div class="producttrademark">
+                                    <span><strong>AMD </strong><i class="fas fa-registered"></i></span>
+                                </div>
+                                <div class="productname">
+                                    <p>CPU Ryzen 5 5600G (AM4)</p>
+                                </div>
+                                <div class="skuunits">
+                                    <div class="productsku">
+                                        <span><strong>SKU:</strong> AMD5A46G</span>
+                                    </div>
+                                    <div class="productunits">
+                                        <span>30 Stock</span>
+                                    </div>
+                                </div>
+                                <div class="productimg">
+                                    <img src="../images/CPU-R5-4.jpg" alt="imgcontcatpro">
+                                </div>
+                            </a>
+                            <div class="valuecart">
+                                <a href="../pages/product.html" class="value">
+                                    <div class="productvalue">
+                                        <span><strong>$ 149.990</strong></span>
+                                    </div>
+                                    <div class="productprevalue">
+                                        <span><s>$ 154.590</s></span>
+                                    </div>
+                                </a>
+                                <a href="../pages/shoppingcart.html" class="cartplus">
+                                    <i class="fa fa-cart-plus"></i>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="product">
+                            <a href="../pages/product.html" class="productinfo">
+                                <div class="producttrademark">
+                                    <span><strong>Gamdias </strong><i class="fas fa-registered"></i></span>
+                                </div>
+                                <div class="productname">
+                                    <p>Gabinete ATX Aura GC1 / 4 Ventiladores ARGB</p>
+                                </div>
+                                <div class="skuunits">
+                                    <div class="productsku">
+                                        <span><strong>SKU:</strong> GAB7157A</span>
+                                    </div>
+                                    <div class="productunits">
+                                        <span>17 Stock</span>
+                                    </div>
+                                </div>
+                                <div class="productimg">
+                                    <img src="../images/GAB-GAMAURA-GC1.jpg" alt="imgcontcatpro">
+                                </div>
+                            </a>
+                            <div class="valuecart">
+                                <a href="../pages/product.html" class="value">
+                                    <div class="productvalue">
+                                        <span><strong>$ 52.990</strong></span>
+                                    </div>
+                                    <div class="productprevalue">
+                                        <span><s>$ 55.790</s></span>
+                                    </div>
+                                </a>
+                                <a href="../pages/shoppingcart.html" class="cartplus">
+                                    <i class="fa fa-cart-plus"></i>
+                                </a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="pagforcat">
                     <div class="pagactual">
                         <p>Pagina actual </p>
-                        <span id="contadorpagcat">1</span>
+                        <span id="contadorpagcat">"1"</span>
                     </div>
                     <div class="pagcat">
                         <button type="button">1</button>
