Se agrega palabras al seo de las paginas

--- a/pages/registeruser.html
+++ b/pages/registeruser.html
@@ -12,7 +12,7 @@
     <!-- SEO -->
     <title>GangaStore</title>
     <meta name="description" content="Compra tus componentes, torres gamer y notebooks a los mejores precios del mercado.">
-    <meta name="keywords" content="notebook barato, notebooks baratos, pc gamer, pc gamer barato, fuentes de poder, placa madre, memoria ram, disipador por aire, disipador pc, water cooling, ventiladores pc, ssd, hdd, gpu, rtx, 3060ti, 3060 ti, 3060, gabinetes, gabinete, itx, atx, micro atx, m-atx">
+    <meta name="keywords" content="register user, register user gangastore, gangastore, ganga store, registar gangastore, registrar gangastore, notebook barato, notebooks baratos, pc gamer, pc gamer barato, fuentes de poder, placa madre, memoria ram, disipador por aire, disipador pc, water cooling, ventiladores pc, ssd, hdd, gpu, rtx, 3060ti, 3060 ti, 3060, gabinetes, gabinete, itx, atx, micro atx, m-atx">
 </head>
 <body>
     <!-- Información escencial para clientes -->
